[BAD] Fix home page overflowing on wide screens

--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,5 +1,7 @@
 @import 'index'
 
+$card-width: Min(58.5vw, 1700px)
+
 .home
   display: flex
   flex: 1 1 auto
@@ -7,19 +9,21 @@
   justify-content: flex-start
   position: relative
   height: 100%
-  //width: 100%
 
 .cardContainer
   display: flex
   flex: 1 1 auto
   width: 100%
-  max-height: 100%
+  max-height: 95vh
 
 canvas
   display: flex
   flex: 1 1 auto
 
-$card-width: 58.5vw
+.canvas
+  display: flex
+  flex: 1 1 auto
+  max-height: 95vh
 
 .cardBorder
   @include secondary-font-style
@@ -32,6 +36,7 @@ $card-width: 58.5vw
   border: dashed $primary-color 1px
   z-index: -5
   margin: 0 auto
+
   .cardInfo
     position: absolute
     left: 0
